styles/index.css
/* ... */
summary::marker { content: '🔴' }
dd, dt, li {
}
dd {}
dt {}
li {}
li li {}
ol > li, ul > li {}
ul > li {}
ol > li { counter-increment: ordered }
ul > li::after,
ol > li::after {}
ul > li::after {}
ol > li::after { content: '\232A' }


/**** COUNTERS *******
  - https://w3.org/TR/predefined-counter-styles
  - https://developer.mozilla.org/en-US/docs/Web/CSS/counters
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style
  - Example Demo - https://mdn.github.io/css-examples/counter-style-demo
*/
@counter-style ordered {
  speak-as: ordered; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/speak-as */
  suffix: ') '; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/suffix */
  system: fixed; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/system */
  system: cyclic;
  system: numeric;
  system: symbolic;
  system: additive;
  system: alphabetic;

  /* Combined values
  system: fixed 3;
  system: extends decimal;
  */
}
@counter-style unordered {
  pad: 'x'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/pad */
  prefix: '»'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/prefix */
  symbols: '-'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/symbols */
  system: cyclic; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/system */
  fallback: cyclic; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/fallback */
  negative: '[' ']'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/negative */
  speak-as: unordered; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/speak-as */
}

@counter-style example {
  pad: 'x'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/pad */
  prefix: '»'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/prefix */
  suffix: ') '; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/suffix */
  system: fixed; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/system */
  negative: '[' ']'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/negative */
  speak-as: example; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/speak-as */
  range: 1 1, 3 3, 5 5; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/range */
  fallback: upper-alpha; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/fallback */
  symbols: "\24B6""\24B7""\24B8"; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/symbols */
}

